DBZ-5118 Make recent changes compatible with Java 8